--- a/arch/loongarch/Kconfig
+++ b/arch/loongarch/Kconfig
@@ -261,10 +261,12 @@ config AS_HAS_EXPLICIT_RELOCS
 	def_bool $(as-instr,x:pcalau12i \$t0$(comma)%pc_hi20(x))
 
 config CC_HAS_LSX_VECTORS
-	def_bool $(cc-option,-mlsx)
+	bool
+	default y
 
 config CC_HAS_LASX_VECTORS
-	def_bool $(cc-option,-mlasx)
+	bool
+	default y
 
 menu "Kernel type and options"
 
