Revert "LoongArch: Add HIGHMEM and FDT support for future"
This reverts commit 439b382d6a7171ab7fe75d0f788425878b2f3a2f.

--- a/arch/loongarch/boot/dts/Makefile
+++ b/arch/loongarch/boot/dts/Makefile
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-only
-subdir-y	+= loongson
+dtstree	:= $(srctree)/$(src)
 
-obj-$(CONFIG_BUILTIN_DTB)	:= $(addsuffix /, $(subdir-y))
+dtb-y := $(patsubst $(dtstree)/%.dts,%.dtb, $(wildcard $(dtstree)/*.dts))
